refactor: Add button to optimize route calculation
Add a button to the index.html file that triggers the optimization of the route calculation when clicked. This improvement enhances the user experience by allowing them to initiate the route optimization process manually.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,16 @@
     <title>Caixa Enginyers - Càlcul de Rutes</title>
   </head>
   <body>
-    <div><p>Hola</p></div>
+    <div><button>Optimitzar Ruta</button></div>
   </body>
 </html>
+
+<script>
+  import { computGlobal } from '../getRoutes.js'
+  document.querySelector('button').addEventListener('click', () => {
+    console.log('CLICK FET');
+    computGlobal().then((res) => {
+      console.log('FET TOT');
+    })
+  });
+</script>
